[package]
name = "agentium"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
plugy = { git = "https://github.com/geofmureithi/plugy.git", branch = "chore/msgpack-codec", default-features = true, features = [
    "runtime",
    "macros",
] }
serde = "1"
